--- a/assets/css/cssdoxygen-awesome-sidebar-only.css
+++ b/assets/css/cssdoxygen-awesome-sidebar-only.css
@@ -36,7 +36,7 @@ html {
 
     --top-height: 120px;
     --toc-sticky-top: -25px;
-    --toc-max-height: calc(100vh - 2 * var(--spacing-medium) - 25px);
+    --toc-max-height: calc(100dvh - 2 * var(--spacing-medium) - 25px);
 }
 
 #projectname {
@@ -57,7 +57,7 @@ html {
     }
 
     #nav-tree, #side-nav {
-        height: calc(100vh - var(--top-height)) !important;
+        height: calc(100dvh - var(--top-height)) !important;
     }
 
     #nav-tree {
@@ -94,7 +94,7 @@ html {
     }
 
     #doc-content {
-        height: calc(100vh - 31px) !important;
+        height: calc(100dvh - 31px) !important;
         padding-bottom: calc(3 * var(--spacing-large));
         padding-top: calc(var(--top-height) - 80px);
         box-sizing: border-box;
